--- a/file.conf
+++ b/file.conf
@@ -23,5 +23,11 @@ level=DEBUG
 formatter=sampleFormatter
 args=(sys.stdout,)
 
+[handler_file]
+class=handlers.TimedRotatingFileHandler
+
+
 [formatter_sampleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+
+
